--- a/cGAN.ipynb
+++ b/cGAN.ipynb
@@ -5,7 +5,7 @@
    "id": "4d817ee3",
    "metadata": {},
    "source": [
-    "# Text to image generation project Milestone 4"
+    "# Text to image generation project"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "id": "1c95c20a",
    "metadata": {},
    "source": [
-    "In this project, we hope to design a Generative adversarial networks (GAN) model that could generate image based on text input. Specifically, we adopt the model architecture used in the recent research paper \"Generative Adversarial Text to Image Synthesis\" and train it on the Caltech-UCSD Birds-200-2011 Dataset (CUB). This dataset includes 11,788 images of 200 bird species, with each species varying in size (Wah et al. 2011). We selected this dataset because bird categorization has been a difficult task even for human due the subtle distinctions between each species. We believe that if our model can accurately identify these small differences and correctly match the images to the corresponding text, it would demonstrate strong generalizability and high performance."
+    "In this project, we hope to design a conditional Generative adversarial networks (GAN) model that could generate image based on text input. Specifically, we adopt the model architecture used in the recent research paper \"Generative Adversarial Text to Image Synthesis\" and train it on the Caltech-UCSD Birds-200-2011 Dataset (CUB). This dataset includes 11,788 images of 200 bird species, with each species varying in size (Wah et al. 2011). We selected this dataset because bird categorization has been a difficult task even for human due the subtle distinctions between each species. We believe that if our model can accurately identify these small differences and correctly match the images to the corresponding text, it would demonstrate strong generalizability and high performance."
    ]
   },
   {
